# rhythm

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  CreatePlaylistPage.h  EndPointTestPage.h  HomePage.h  LoginPage.h  NavBar.h  PlaylistAlgorithm.h  README.md  SavedPlaylistPage.h  SpotifyOAuth.h  mainwindow.h  playlistAlgorithm.h  userInformation.h
resources/: main.css
src/: Application.cpp  Application.h  CreatePlaylistPage.cpp  EndPointTestPage.cpp  HomePage.cpp  HomePage.h  LoginPage.cpp  LoginPage.h  NavBar.cpp  PlaylistAlgorithm.cpp  README.md  SavedPlaylistPage.cpp  SpotifyOAuth.cpp  SpotifyOAuth.h  eqwidget.cpp  eqwidget.h  main.cpp  mainwindow.cpp  mainwindow.ui  playlistAlgorithm.cpp  playlistAlgorithm.h  qcustomplot.h  userInformation.cpp
ui/: createplaylistpage.ui  ui_createplaylistpage.h
